# gitlab-gitea-migrator

./: .gitignore  README.md  clean.py  config.py  config.toml.example  migrate.py  pyproject.toml  util.py
